--- a/bin/modelling/model_two.ipynb
+++ b/bin/modelling/model_two.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,9 +31,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'connect' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-277f1fcf6713>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Connect to the database.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mconn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mconnect\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhost\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"localhost\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0muser\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"root\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpasswd\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"praquplDop#odlg73h?c\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdb\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"baseball_stats_db\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mqu_vTwo\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mQu_VTwo\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mconn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mqu\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mQu\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mconn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'connect' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Connect to the database.\n",
     "conn = connect(host=\"localhost\", user=\"root\", passwd=\"praquplDop#odlg73h?c\", db=\"baseball_stats_db\")\n",
@@ -43,15 +55,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "[('ATL199004150', 1990, 15, 4, 6, 13, 'ATL', 'CIN', 1), ('CAL199004150', 1990, 15, 4, 4, 1, 'CAL', 'MIN', 0), ('CHA199004150', 1990, 15, 4, 4, 1, 'CHA', 'CLE', 0), ('DET199004150', 1990, 15, 4, 6, 4, 'DET', 'BAL', 0), ('HOU199004150', 1990, 15, 4, 4, 5, 'HOU', 'LAN', 1)]\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get all the game ids with the relevent information attributed to those id. Ensure to get games past May 15.\n",
     "# The games are returned from earliest played to most recent.\n",
@@ -61,18 +67,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "[['LAN199005020', 0],\n ['MON199005020', 1],\n ['NYA199005020', 1],\n ['NYN199005020', 0],\n ['PHI199005020', 0]]"
-     },
-     "metadata": {},
-     "execution_count": 5
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Retrieve only the game ids and their outcomes for modelling purposes. In addition, remove the first 200 games from the model to incur some historic data.\n",
     "game_ids = [[game_id[0], game_id[8]] for game_id in game_outcomes]\n",
@@ -82,9 +79,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'qu_vTwo' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-00f23cf59520>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mdata_locs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPath\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mr'C:\\Users\\micha\\Documents\\Baseball_Analytics_Source_Data\\model_v2'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mpitchers_pickle\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'game_pitchers.pickle'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mall_pitcher\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mqu_vTwo\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_pitchers_in_all_games\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata_locs\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mpitchers_pickle\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0mqu_vTwo\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munpack_pitchers\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mall_pitcher\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'qu_vTwo' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Fetch the players, pitchers, and offensive features from all the games.\n",
     "data_locs = Path(r'C:\\Users\\micha\\Documents\\Baseball_Analytics_Source_Data\\model_v2')\n",
@@ -95,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,8 +134,9 @@
     "    Function Throws: Nothing\n",
     "    Function Returns: The list of pitchers.\"\"\"\n",
     "\n",
+    "    # TO OPTIMISE: IMPLEMENT A MAX HEAP TO REDUCE O(n^2) to O(n)\n",
     "    pitchers = []\n",
-    "    for counter in len(pitcher_appearences):\n",
+    "    for counter in range(0, len(pitcher_appearences)):\n",
     "        max = 0\n",
     "        max_pitcher = \"\"\n",
     "        for pitcher, num in pitcher_appearences.items():\n",
@@ -135,12 +145,20 @@
     "                max_pitcher = pitcher\n",
     "        pitchers.append(max_pitcher)\n",
     "        del pitcher_appearences[max_pitcher]\n",
-    "    print(len(pitchers))\n",
     "    return pitchers\n",
     "\n",
     "def add_pitcher_to_dict(dictionary, pitcher, innings):\n",
     "\n",
-    "    \"\"\" \"\"\"\n",
+    "    \"\"\"Function Description: Add a pitcher to the dictionary related to the aggregation function.\n",
+    "    Function Parameters: dictionary (The dictionary to add the pitcher.), \n",
+    "        pitcher (The pitcher to be added.), innings The innings the pitcher plays.\n",
+    "    Function Throws: Nothing\n",
+    "    Function Returns: Nothing\n",
+    "    \"\"\"\n",
+    "    if pitcher not in dictionary:\n",
+    "        dictionary[pitcher] = innings\n",
+    "    else:\n",
+    "        dictionary[pitcher] += innings\n",
     "\n",
     "def get_pitchers_in_window(games):\n",
     "\n",
@@ -153,20 +171,12 @@
     "    starter_total_innings = {}\n",
     "    relief_total_inings = {}\n",
     "    for game in games:\n",
-    "        game_pitchers = game[0]\n",
-    "        for pitcher in game_pitchers:                                          # Aggregate the pitchers within the rosters by number of appearances and position.\n",
-    "            if pitcher not in total_innings:\n",
-    "                if game_pitchers[pitcher][1] == 1:                             # If the appearance number equals 1, then it is a starting pitcher. \n",
-    "                    starter_total_innings[pitcher] = game_pitchers[pitcher][0]\n",
-    "                else:\n",
-    "                    relief_total_inings[pitcher] = game_pitchers[pitcher][0]\n",
+    "        game_pitchers = game[1]                                                   # Here are the pitchers in the game.\n",
+    "        for pitcher in game_pitchers:                                             # Aggregate the pitchers within the rosters by number of appearances and position.\n",
+    "            if game_pitchers[pitcher][1] == 1:                                    # If the appearance number equals 1, then it is a starting pitcher. \n",
+    "                add_pitcher_to_dict(starter_total_innings, pitcher, game_pitchers[pitcher][0])\n",
     "            else:\n",
-    "                if game_pitchers[pitcher][1] == 1:\n",
-    "                    starter_total_innings[pitcher] += game_pitchers[pitcher][0]\n",
-    "                else:\n",
-    "                    relief_total_inings[pitcher] += game_pitchers[pitcher][0]\n",
-    "    print(len(starter_total_innings))\n",
-    "    print(len(relief_total_inings))\n",
+    "                relief_total_inings[pitcher] = game_pitchers[pitcher][0]\n",
     "    return (order_pitchers(starter_total_innings), order_pitchers(relief_total_inings)) \n",
     "\n",
     "\n",
@@ -189,23 +199,24 @@
     "        window_min = window_max\n",
     "        window_max += window_size\n",
     "        break\n",
+    "    # ENSURE THE FINAL WINDOW IS COVERED (May not be perfect)\n",
+    "    \n",
+    "# def get_pitchers_in_windows(pitchers, window_size=40):\n",
     "\n",
-    "def get_pitchers_in_windows(pitchers, window_size=40):\n",
+    "#     \"\"\"# Function Description: Retrieve all the pitchers who participated on the teams starting lineup.\n",
+    "#     # Function Parameters: pitchers (The dictionary containing all the pitchers.), \n",
+    "#     #    window_size (The pitchers on the roster within the specified timeframe.)\n",
+    "#     # Function Throws: Nothing\n",
+    "#     # Function Returns: A dictionary containing the pitcher names within the specified time frame.\"\"\"\n",
     "\n",
-    "    \"\"\"# Function Description: Retrieve all the pitchers who participated on the teams starting lineup.\n",
-    "    # Function Parameters: pitchers (The dictionary containing all the pitchers.), \n",
-    "    #    window_size (The pitchers on the roster within the specified timeframe.)\n",
-    "    # Function Throws: Nothing\n",
-    "    # Function Returns: A dictionary containing the pitcher names within the specified time frame.\"\"\"\n",
-    "\n",
-    "    starting_rosters = {}\n",
-    "    for team in pitchers:\n",
-    "        team_years = pitchers[team]\n"
+    "#     starting_rosters = {}\n",
+    "#     for team in pitchers:\n",
+    "#         team_years = pitchers[team]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "outputPrepend",
@@ -1274,33 +1285,15 @@
      "outputPrepend"
     ]
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "1997 162\n"
-    },
-    {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'total_innings' is not defined",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-30-5aeb7905f6f9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0myear\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mall_pitcher\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mteam\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0myear\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mend\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m' '\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m         \u001b[0mprocess_year\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mall_pitcher\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mteam\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0myear\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m         \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-29-dcc2c9e69087>\u001b[0m in \u001b[0;36mprocess_year\u001b[1;34m(year_games, window_size)\u001b[0m\n\u001b[0;32m     84\u001b[0m     \u001b[0mwindow_max\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mwindow_size\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     85\u001b[0m     \u001b[1;32mwhile\u001b[0m \u001b[0mwindow_max\u001b[0m \u001b[1;33m<=\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0myear_games\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m          \u001b[1;31m# Find the pitchers on the roster within the desired time frame.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 86\u001b[1;33m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mget_pitchers_in_window\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0magg_pitchers\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mwindow_min\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mwindow_max\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     87\u001b[0m         \u001b[0mwindow_min\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mwindow_max\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     88\u001b[0m         \u001b[0mwindow_max\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mwindow_size\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-29-dcc2c9e69087>\u001b[0m in \u001b[0;36mget_pitchers_in_window\u001b[1;34m(games)\u001b[0m\n\u001b[0;32m     53\u001b[0m         \u001b[0mgame_pitchers\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgame\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     54\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mpitcher\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mgame_pitchers\u001b[0m\u001b[1;33m:\u001b[0m                                          \u001b[1;31m# Aggregate the pitchers within the rosters by number of appearances and position.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 55\u001b[1;33m             \u001b[1;32mif\u001b[0m \u001b[0mpitcher\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtotal_innings\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     56\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0mgame_pitchers\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mpitcher\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m                             \u001b[1;31m# If the appearance number equals 1, then it is a starting pitcher.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     57\u001b[0m                     \u001b[0mstarter_total_innings\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mpitcher\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgame_pitchers\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mpitcher\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'total_innings' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for team in all_pitcher:\n",
     "    for year in all_pitcher[team]:\n",
-    "        print(year, end=' ')\n",
+    "        print('Year ' + str(year))\n",
     "        process_year(all_pitcher[team][year])\n",
     "        break\n",
-    "    break"
+    "    break\n",
+    "## Looks like there are way to many starting pitchers...."
    ]
   },
   {
